# AML_project_5

./: .gitignore  COSE DA FARE.txt  Foglio di lavoro senza nome.xlsx  PRESENTAZIONE SCHEMA.txt  Project 5_ Federated and Distributed Learning.docx  README.md  Risultati.docx  benchmark.ipynb  le_nouveaux_log.csv  mail_prof.txt  paper_start.tex  paper_start.txt  pyproject.toml  sampled_uniform_50_classes_per_client.csv
Ale_personal_contribution/: last_2p_Ale_Personal_contribution_with_selection (2) (1).ipynb
Cappe_personal_contribution/: Cappe_Personal_contribution.ipynb
Cifar 100 Baseline/: baseline_cifar_search_best_scheduler.ipynb  global_results.csv  results_log.csv  results_only_cifar2_scheduler_ExponentialLR.csv  results_only_cifar_more_step_scheduler_ExponentialLR.csv
Cifar_100_Baseline/: baseline_cifar_config_search.ipynb  baseline_cifar_search_best_scheduler.ipynb  federated baseline CIFAR 100 config search.ipynb  global_results.csv  results_log.csv  results_only_cifar2_scheduler_CosineAnnealingLR.csv  results_only_cifar2_scheduler_CosineAnnealingWarmRestarts.csv  results_only_cifar2_scheduler_OneCycleLR.csv  results_only_cifar2_scheduler_ReduceLROnPlateau.csv  results_only_cifar2_scheduler_StepLR.csv  results_only_cifar_more_step_scheduler_CosineAnnealingWarmRestarts.csv  results_only_cifar_scheduler_CosineAnnealingLR.csv
Cifar_100_Federated/: Heterogeneous_checkpoints_federated.ipynb  fedavg_results.csv  fedavg_results_gamma_0.1.csv  fedavg_results_gamma_1.csv  fedavg_results_skewed_gamma10.csv  hetetogeneous_shard_non_iid_1_J_16_results.csv  (+12 more)
(+231 files in other folders)
