[tool.poetry]
name = "advanced-machine-learning-labs"
version = "0.1.0"
description = "used to do labs of AML"
authors = ["Scrivane"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scipy = "^1.15.2"
tensorboard = "^2.20.0"
pandas = "^2.3.1"
datasets = "^4.0.0"
scikit-learn = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
